# ai-developer

./: .ai-agent.yml.example  .env.example  .gitignore  .gitlab-ci.yml  AI-developer документация.docx  Caddyfile  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  prometheus.yml  pyproject.toml
alembic/: README  env.py
app/: __init__.py  answer_extractor.py  audit.py  briefing.py  briefing_state_machine.py  briefing_store.py  ci.py  cli.py  coding.py  commands.py  config.py  context_engine.py  contracts.py  dod.py  gates.py  gitlab_roles.py  go_authorizer.py  graph_build.py  intake.py  main.py  metrics.py  orchestrator.py  planning.py  preview.py  redteam.py  repo_config.py  repo_planner.py  research.py  reviewer.py  risk.py  sandbox_exec.py  scope.py  state.py  webhooks.py  worker.py  workspace.py
docs/: configuration.md  index.md  security.md  testing.md
secrets/: README.md
tests/: conftest.py  test_answer_extractor.py  test_audit.py  test_briefing.py  test_briefing_store.py  test_cancel.py  test_ci.py  test_coding_loop.py  test_commands.py  test_config.py  test_context_engine.py  test_contracts.py  test_dod.py  test_fakes.py  test_fsm.py  test_gates_wiring.py  test_go_authorizer.py  test_graph.py  test_graph_build.py  test_health.py  test_intake.py  test_live_wiring.py  test_multi_repo.py  test_orchestrator.py  test_phase8.py  test_planning_coding.py  test_repo_config.py  test_repo_planner.py  test_research_preview.py  test_review_gates.py  test_risk.py  test_sandbox_exec.py  test_scope.py  (+4 more)
(+41 files in other folders)
